Removes twitter reference (rip), slighty changes project description

--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -4,7 +4,7 @@
     "year": 2023,
     "image": "projects/bomb-defusal-2.png",
     "link": "https://mstdn.social/@vuewis/110208418900214760",
-    "description": "A level blockout for a Bomb-Defusal-style (Valorant) map, created in Unreal Engine 5.",
+    "description": "A level blockout for a Bomb-Defusal-style map, created in Unreal Engine 5.",
     "linktitle": "Mastodon"
   },
   {
