Dark mode; new picture

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "sass": "^1.54.3",
     "svelte": "^3.49.0",
-    "tabler-icons-svelte": "^1.8.0",
-    "vite": "^3.0.0",
     "svelte-image": "^0.2.9",
-    "svelte-preprocess": "^4.10.7"
+    "svelte-preprocess": "^4.10.7",
+    "tabler-icons-svelte": "^1.8.0",
+    "vite": "^3.0.0"
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.12",
+    "@fontsource/outfit": "^5.0.8",
     "animate.css": "^4.1.1",
     "swiper": "^8.3.2"
   }
